# test_game

./: CMakeLists.txt  main.cpp
src/: main.cpp
src/controller/: MainController.cpp  MainController.h
src/model/: Object.cpp  Object.h
src/model/Figure/: Figure.cpp  Figure.h
src/model/Figure/Collider/: Collider.cpp  Collider.h
src/model/GameObject/: GameObject.cpp  GameObject.h
src/model/GameObject/Sprite/: Sprite.cpp  Sprite.h
src/model/Point/: Point.cpp  Point.h
src/model/RecArea/: RecArea.cpp  RecArea.h
src/view/: ButtonChecker.cpp  ButtonChecker.h  GameView.cpp  GameView.h  ObjectView.cpp  ObjectView.h  Window.cpp  Window.h  a.cpp  a.h
